# connectyourpro

./: .gitignore  LICENSE  README.md  build_release.bat
docs/: CNAME  guide.html  index.html
installer/: connectyourpro.iss
testapp/: CMakeLists.txt
testapp/src/: JoyConDecoder.cpp  JoyConDecoder.h  dsu_pointer_tester.cpp  probe.cpp  testapp.cpp  testapp_final.cpp
